infrastructure/pinniped/controller/overlays/ovh-cloud/ingress-concierge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinniped-concierge-impersonation-proxy
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: pinniped.example.domain.tld
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pinniped-concierge-impersonation-proxy-cluster-ip
                port:
                  number: 443
